# cargo-count-next

./: .clog.toml  .gitignore  CONTRIBUTORS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  error.rs  fmt.rs  fsutil.rs  language.rs  macros.rs  main.rs
src/count/: counts.rs  mod.rs
