[package]
name = "cargo-count-next"
version = "0.3.0"
edition = "2021"
authors = ["Kevin K <kbknapp@gmail.com>, TimTheBig"]
exclude = ["*.png"]
description = "Cargo subcommand for displaying statistics about projects, such as code, comments, and unsafe counters"
repository = "https://github.com/kbknapp/cargo-count.git"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "statistics", "count", "lines"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-count-next"

[badges]
travis-ci = {repository = "kbknapp/cargo-count"}

[dependencies]
clap = {version = "3.2", features = ["cargo"]}
glob = "0.3"
tabwriter = "1.4"
regex = "1.10"
gitignore = "1.0"
ansi_term = {version = "0.12", optional = true}
clippy = {version = "0.0.302", optional = true}
