[package]
name = "cargo-count-next"
version = "0.3.0"
edition = "2021"
authors = ["TimTheBig, Kevin K <kbknapp@gmail.com>"]
exclude = ["*.png"]
description = "Cargo subcommand for displaying statistics about projects, such as code, comments, and unsafe counters"
repository = "https://github.com/TimTheBig/cargo-count-next.git"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "statistics", "count", "lines"]
categories = ["development-tools", "development-tools::cargo-plugins"]
# The minimum supported version of rust(msrv):
rust-version = "1.65.0"

[[bin]]
name = "cargo-counter"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = {version = "3.2", features = ["cargo"]}
glob = "0.3"
tabwriter = "1.4"
regex = "1.10"
gitignore = "1.0"
ansiterm = {version = "0.12", optional = true}
clippy = {version = "0.0.302", optional = true}
